--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
         </div>
 
         <div class="card-body">
-           <a class="btn btn-primary" href="<%= article.slug %>">Ler artigo</a>
+           <a class="btn btn-primary" href="/<%= article.slug %>">Ler artigo</a>
 
         </div>
       </div>
